// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WheelSegment > matches snapshots 1`] = `
<div
  class="absolute top-0 box-border size-full text-right font-semibold text-black"
  data-testid="wheel-segment"
  style="background-color: rgb(0, 0, 255); transform: rotate(-90deg) rotate(180deg) rotate(0deg); transform-origin: 50% 50%;"
>
  <div
    class="absolute right-5 top-1/2 -translate-y-1/2 text-right text-base [transform-origin:right_center] sm:text-xl"
    data-testid="wheel-segment-name"
    style="color: rgb(255, 255, 255);"
  >
    Test Segment 1
  </div>
</div>
`;

exports[`WheelSegment > matches snapshots 2`] = `
<div
  class="absolute top-0 box-border size-full text-right font-semibold text-black"
  data-testid="wheel-segment"
  style="background-color: rgb(0, 0, 255); transform: rotate(-90deg) rotate(90deg) rotate(0deg); transform-origin: 50% 50%; clip-path: polygon(100% 0, 100% 100%, 50% 100%, 50% 0);"
>
  <div
    class="absolute right-5 top-1/2 -translate-y-1/2 text-right text-base [transform-origin:right_center] sm:text-xl"
    data-testid="wheel-segment-name"
    style="color: rgb(255, 255, 255);"
  >
    Test Segment 2
  </div>
</div>
`;

exports[`WheelSegment > matches snapshots 3`] = `
<div
  class="absolute top-0 box-border size-full text-right font-semibold text-black"
  data-testid="wheel-segment"
  style="background-color: rgb(0, 0, 255); transform: rotate(-90deg) rotate(60deg) rotate(0deg); transform-origin: 50% 50%; clip-path: polygon(50% 50%, 100% -36.602540000000005%, 100% 136.60254%);"
>
  <div
    class="absolute right-5 top-1/2 -translate-y-1/2 text-right text-base [transform-origin:right_center] sm:text-xl"
    data-testid="wheel-segment-name"
    style="color: rgb(255, 255, 255);"
  >
    Test Segment 3
  </div>
</div>
`;

exports[`WheelSegment > matches snapshots 4`] = `
<div
  class="absolute top-0 box-border size-full text-right font-semibold text-black"
  data-testid="wheel-segment"
  style="background-color: rgb(0, 0, 255); transform: rotate(-90deg) rotate(45deg) rotate(0deg); transform-origin: 50% 50%; clip-path: polygon(50% 50%, 100% 0%, 100% 100%);"
>
  <div
    class="absolute right-5 top-1/2 -translate-y-1/2 text-right text-base [transform-origin:right_center] sm:text-xl"
    data-testid="wheel-segment-name"
    style="color: rgb(255, 255, 255);"
  >
    Test Segment 4
  </div>
</div>
`;

exports[`WheelSegment > matches snapshots 5`] = `
<div
  class="absolute top-0 box-border size-full text-right font-semibold text-black"
  data-testid="wheel-segment"
  style="background-color: rgb(0, 0, 255); transform: rotate(-90deg) rotate(36deg) rotate(0deg); transform-origin: 50% 50%; clip-path: polygon(50% 50%, 100% 13.672870000000003%, 100% 86.32713%);"
>
  <div
    class="absolute right-5 top-1/2 -translate-y-1/2 text-right text-base [transform-origin:right_center] sm:text-xl"
    data-testid="wheel-segment-name"
    style="color: rgb(255, 255, 255);"
  >
    Test Segment 5
  </div>
</div>
`;
